--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,27 @@ body {
   font-family: "Josefin Sans", sans-serif;
 }
 
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 2px;
+    height: 2px;
+  }
+
+  .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: rgba(113,113,122,0.8);
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: -webkit-linear-gradient(#db2777, #0891b2);
+    border-radius: 100%;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: -webkit-linear-gradient(#db2777, #0891b2);
+  }
+}
+
 .gradient-text{
   @apply text-transparent bg-clip-text from-cyan-600 via-indigo-600 to-pink-600
 }
@@ -33,9 +54,15 @@ body {
   -webkit-text-fill-color: transparent;
 }
 
+.backface-hidden{
+  backface-visibility: hidden;
+}
+.preserve-3d {
+  transform-style: preserve-3d;
+}
+
 .button-menu:hover {
   box-shadow: 0 0 6px 2px rgb(212,212,216,0.9), inset 0 0 6px 2px rgb(212,212,216,0.9);
-  border-color: rgb(212,212,216);
 }
 
 .button-contact:hover{
@@ -63,7 +90,7 @@ body {
 }
 
 .circle-skills-icon {
-  background: linear-gradient(125deg, rgba(8,145,178,1) 0%, rgba(79,70,229,1) 40%, rgba(219,39,119,1) 90%);
+  background: linear-gradient(125deg, #0891b2 0%, #4f46e5 40%, #db2777 90%);
   color: rgb(212,212,216);
   width: 24px;
   height: 24px;
